Solved scrollbar rendered because of tooltip

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: stretch;
   text-align: center;
+  overflow: hidden;
 }
 
 .mainView{
